# vyper

./: .bumpversion.cfg  .coveralls.yml  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CLAUDE.md  Dockerfile  FUNDING.json  FUNDING.yml  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  Sponsor FUNDING.yml  TERMS.csv  TERMS.md  agents.md  ape-config.yaml  codecov.yml  compile_lll.py  compiler_plugin.py  fmt_commit_msg.py  make.cmd  opcodes.py  parser.py  pyproject.toml  quicktest.sh  redundant-memory-copy-forwarding-simplification.md  requirements-dev.txt  requirements-docs.txt  setup.cfg  setup.py  snek.py  test.lll  test2.py  (+5 more)
.circleci/: config.yml
.clusterfuzzlite/: Dockerfile
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  VIP_TEMPLATE.md  changelog.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  general.md  vip.md
.github/scripts/: compare_bytecode.py  compare_gas.py  create-or-update-ref.js  measure_bytecode.py  measure_gas.py  prune-prereleases.js
.github/workflows/: auto-label.yml  build.yml  bytecode-size-comment.yml  bytecode-size.yml  codeql.yml  deploy-docker.yml  era-tester.yml  gas-bench-comment.yml  gas-bench.yml  ghcr.yml  integrators.yml  pre-release.yml  publish.yml  pull-request.yaml  release-pypi.yml  release.yml  sync_docs.yml  test.yml  update_readme_progress.yml
.snapcraft/: travis_snapcraft.cfg
docs/: Makefile  abstract-modules.rst  bugs.json  bugs_by_version.json  built-in-functions.rst  compiler-exceptions.rst  compiler-notes.rst  compiling-a-contract.rst  conf.py  constants-and-vars.rst  contributing.rst  control-structures.rst  deep-verification.rst  deploying-contracts.rst  event-logging.rst  frequently-asked-questions.rst  index.rst  installing-viper.rst  installing-vyper.rst  interfaces.rst  logging.rst  make.bat  natspec.rst  old_readme.txt  quickstart.rst  release-notes.rst  resources.rst  revert_on_failure.md  scoping-and-declarations.rst  solidity-differences.rst  statements.rst  stdlib-math.rst  structure-of-a-contract.rst  style-guide.rst  testing-contracts-ape.rst  testing-contracts-brownie.rst  testing-contracts-ethtester.rst  testing-contracts-titanoboa.rst  testing-contracts.rst  testing-deploying-contracts.rst  (+8 more)
docs/_static/: custom.css
docs/vips/: unbounded-sequence-types.md
docs/vyper-by-example/: blind-auction.rst  company-stock.rst  crowdfund.rst  erc1155.rst  erc20.rst  erc4626.rst  erc721.rst  factory.rst  index.rst  market-maker.rst  name-registry.rst  safe-remote-purchase.rst  simple-auction.rst  storage.rst  voting.rst  wallet.rst
examples/: company_stock.vy  crowdfund.v.py  crowdfund.vy  name_registry.vy  storage.vy
examples/ERC20/: erc20.v.py  erc20.vy  test.py
examples/ERC20_solidity_compatible/: ERC20.v.py  README.md  run_tests.py
examples/auction/: auction.vy
examples/auctions/: blind_auction.vy  simple_open_auction.v.py  simple_open_auction.vy
examples/company_stock/: company.v.py
examples/crowdfund/: crowdfund.vy
examples/factory/: Exchange.vy  Factory.vy
examples/market_maker/: on_chain_market_maker.v.py  on_chain_market_maker.vy
examples/name_registry/: name_registry.vy
examples/safe_remote_purchase/: safe_remote_purchase.v.py  safe_remote_purchase.vy
examples/stock/: comp.vy  company.v.py  company.vy  test_company.py
examples/storage/: advanced_storage.vy  storage.vy
examples/token/: vipercoin.v.py
examples/tokens/: ERC1155.vy  ERC1155ownable.vy  ERC20.v.py  ERC20.vy  ERC201.vy  ERC4626.vy  ERC721.vy  ERC777.vy  IERC20Event.vy  TOKEN404.vy  vipercoin.v.py  vypercoin.v.py  vypercoin.vy
examples/tokenswap/: Exchange.vy  Registry.vy
examples/voting/: ballot.v.py  ballot.vy
examples/wallet/: sign.js  wallet.v.py  wallet.vy  wallet_test.py
examples/wallet_with_pincode/: wallet_with_pincode.vy
hooks/: build
logo/: vyper-logo.ai
scripts/: check_docs.py  fixed_address_creator.py  forwarder.py  po_stats.py  rlp_decoder.py  rlp_decoder.se.py  symbolic_tests.sh  update_readme_progress.py
skills/: SKILL.md  codegen.md  contributing.md  semantics.md  testing.md  venom.md
snap/: snapcraft.yaml
tests/: ast_utils.py  base_conftest.py  conftest.py  exports.md  exports.py  fuzzing_strategies.py  hevm.py  setup_transaction_tests.py  test_development.py  test_invalids.py  test_parser.py  test_server.py  test_utils.py  tmp39.vy  utils.py  venom_utils.py  vyper_pytest.py
tests/abi_types/: test_invalid_abi_types.py
tests/ast/: fuzz_parse_to_ast.py  test_folding.py  test_metadata_journal.py  test_natspec.py  test_pre_parser.py
tests/compiler/: test_bytecode_runtime.py  test_calldatacopy.py  test_clamps.py  test_compile_code.py  test_opcodes.py  test_pre_parser.py  test_sha3_32.py  test_source_map.py
tests/dsl/: __init__.py  code_model.py
tests/evm_backends/: abi.py  abi_contract.py  base_env.py  pyevm_env.py  revm_env.py
tests/examples/: conftest.py
tests/features/: test_external_contract_calls.py
tests/fixtures/: memorymock.py
tests/functional/: test_storage_slots.py
tests/fuzzing/: test_exponents.py
tests/grammar/: conftest.py  test_decorators_grammar.py  test_dict_grammar.py  test_grammar.py  vyper.lark
tests/integration/: test_pickle_ast.py
tests/parser/: test_call_graph_stability.py  test_selector_table.py  test_selector_table_stability.py
tests/revm/: abi.py  abi_contract.py  base_evm_contract.py  revm_env.py  vm_utils.py
tests/signatures/: test_invalid_function_decorators.py  (+1 more)
viper/: __init__.py  compile_lll.py  compiler.py  compiler_plugin.py  exceptions.py  function_signature.py  functions.py  opcodes.py  optimizer.py  parser.py  parser_utils.py  premade_contracts.py  server.py  types.py  utils.py
viper/parser/: expr.py  (+3 more)
vyper/: __init__.py  __main__.py  abi_types.py  address_space.py  ast.py  ast_utils.py  changelog.md  compile_lll.py  compiler.py  exceptions.py  function_signature.py  functions.py  opcodes.py  optimizer.py  premade_contracts.py  settings.py  types.py  typing.py  utils.py  vdb.py  vyper.py  vyper_git_commithash.txt  warnings.py
(+1544 files in other folders)
