# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=7.1.0,<8.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vyper"
requires-python = ">=3.11,<4"
dynamic = [
    "version",
    "description",
    "readme",
    "license",
    "authors",
    "keywords",
    "classifiers",
    "scripts",
    "urls",
]
dependencies = [
    "cbor2>=5.4.6,<6",
    "pycryptodome>=3.5.1,<4",
    "packaging>=23.1",
    "lark>=1.0.0,<2",
    "wheel",
    "immutables",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | env
  | venv
)/
'''
force-exclude = 'vyper/version\.py'
skip-magic-trailing-comma = true

[tool.ruff]
line-length = 100
target-version = "py311"
force-exclude = true
extend-exclude = [
    "build",
    "docs",
    "venv*",
    "vyper/version.py",
]

[tool.ruff.lint]
select = ["B0", "E", "F", "I", "UP031", "UP032", "W"]
ignore = [
    "E203",  # match the previous Black-compatible Flake8 config
]
external = [
    "E122",
    "E128",
    "FS",
]

[tool.ruff.lint.isort]
known-first-party = ["vyper"]
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"*.pyi" = ["F401", "F403"]
"tests/unit/compiler/venom/test_builder.py" = ["F841"]
"vyper/ast/__init__.py" = ["I001"]
# Ruff emits E741 in two existing tests where the previous Flake8 stack did not.
"tests/functional/builtins/folding/test_min_max.py" = ["E741"]
# These files have existing long embedded Vyper/Venom snippets. Keep the
# Ruff migration behavior-preserving rather than rewriting test fixtures.
"tests/functional/builtins/codegen/test_method_id.py" = ["E501"]
"tests/functional/builtins/codegen/test_minmax.py" = ["E501"]
"tests/functional/builtins/codegen/test_raw_call.py" = ["E501"]
"tests/functional/codegen/calling_convention/test_default_parameters.py" = ["E501"]
"tests/functional/codegen/calling_convention/test_internal_call.py" = ["E501"]
"tests/functional/codegen/calling_convention/test_return.py" = ["E501"]
"tests/functional/codegen/features/test_logging.py" = ["E501"]
"tests/functional/codegen/storage_variables/test_setters.py" = ["E501"]
"tests/functional/codegen/types/test_dynamic_array.py" = ["E501", "E741"]
"tests/functional/codegen/types/test_lists.py" = ["E501"]
"tests/functional/syntax/exceptions/test_overflow_exception.py" = ["E501"]
"tests/functional/syntax/test_as_wei_value.py" = ["E501"]
"tests/functional/syntax/test_constants.py" = ["E501"]
"tests/unit/compiler/venom/test_dead_store_elimination.py" = ["E501"]

[tool.pytest.ini_options]
addopts = """-n auto --dist worksteal --strict-markers -m "not fuzzing" """
python_files = "test_*.py"
testpaths = ["tests"]
xfail_strict = true
markers = [
    "fuzzing: Run Hypothesis fuzz test suite (deselect with '-m \"not fuzzing\"')",
    "requires_evm_version(version): Mark tests that require at least a specific EVM version and would throw EvmVersionException otherwise",
    "venom_xfail: mark a test case as a regression (expected to fail) under the venom pipeline",
    "hevm: run tests marked for symbolic execution",
]

[tool.mypy]
disable_error_code = ["annotation-unchecked"]
follow_imports = "silent"
ignore_missing_imports = true
implicit_optional = true

[tool.coverage.run]
branch = true
source = ["vyper"]
# this is not available on the CI step that performs `coverage combine`
omit = ["vyper/version.py"]
# allow `coverage combine` to combine reports from heterogeneous OSes.
# (mainly important for consolidating coverage reports in the CI).
relative_files = true

[dependency-groups]
test = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-instafail>=0.4,<1.0",
    "pytest-xdist>=3.0,<3.4",
    "pytest-split>=0.7.0,<1.0",
    "eth_abi>=5.0.0,<6.0.0",
    "py-evm>=0.12.1b1",
    "lark==1.1.9",
    "hypothesis[lark]>=6.0,<7.0",
    "eth-stdlib==0.2.7",
    "eth-account==0.12.2",
    "setuptools",
    "hexbytes>=1.2",
    "pyrevm>=0.3.2",
]
lint = [
    "black==26.3.1",
    "mypy==1.19",
    "ruff==0.14.14",
]
docs = [
    "Pygments==2.18.0",
    "shibuya==2024.1.17",
    "sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-reredirects==0.1.5",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
    "ipython",
    "pre-commit",
    "pyinstaller",
    "twine",
]
