[metadata]
license_files = LICENSE

[aliases]
test = pytest

[flake8]
extend-ignore = E203
max-line-length = 100
exclude =
	venv*
	.tox
	docs
	build
per-file-ignores =
	*/__init__.py: F401

[tool:isort]
force_grid_wrap = 0
include_trailing_comma = True
known_first_party = vyper
multi_line_output = 3
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100

[tool:pytest]
addopts = -n auto
	--cov-branch
	--cov-report term
	--cov-report html
	--cov-report xml
	--cov=vyper
	--hypothesis-show-statistics
python_files = test_*.py
testpaths = tests
markers =
	fuzzing: Run Hypothesis fuzz test suite (deselect with '-m "not fuzzing"')

[tool:mypy]
ignore_missing_imports = True
