
[metadata]
license_files = LICENSE

# flake8 config (flake8 doesn't support pyproject.toml natively)
# See https://github.com/PyCQA/flake8/issues/234
[flake8]
extend-ignore = E203
enable-extensions = FS003
max-line-length = 100
exclude =
	venv*
	docs
	build
per-file-ignores =
	*/__init__.py: F401
	tests/unit/compiler/venom/test_builder.py: F841
